hello-world/ingress.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2018-07-10T02:15:06Z
  generation: 1
  labels:
    app: ingress-example-joomla
    chart: joomla-2.0.2
    heritage: Tiller
    release: ingress-example
  name: ingress-example-joomla
  namespace: default
  resourceVersion: "444617"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/ingress-example-joomla
  uid: 1055867a-83e7-11e8-99da-aa93f7dce897
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ingress-example-joomla
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ingress-example-joomla
    spec:
      containers:
      - env:
        - name: ALLOW_EMPTY_PASSWORD
          value: "yes"
        - name: MARIADB_HOST
          value: ingress-example-mariadb
        - name: MARIADB_PORT_NUMBER
          value: "3306"
        - name: JOOMLA_DATABASE_NAME
          value: bitnami_joomla
        - name: JOOMLA_DATABASE_USER
          value: bn_joomla
        - name: JOOMLA_DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: mariadb-password
              name: ingress-example-mariadb
        - name: JOOMLA_USERNAME
          value: user
        - name: JOOMLA_PASSWORD
          valueFrom:
            secretKeyRef:
              key: joomla-password
              name: ingress-example-joomla
        - name: JOOMLA_EMAIL
          value: user@example.com
        image: docker.io/bitnami/joomla:3.8.10
        imagePullPolicy: IfNotPresent
        name: ingress-example-joomla
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /index.php
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 300m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: 2018-07-10T02:15:07Z
    lastUpdateTime: 2018-07-10T02:15:07Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: 2018-07-10T02:25:07Z
    lastUpdateTime: 2018-07-10T02:25:07Z
    message: ReplicaSet "ingress-example-joomla-8978687f6" has timed out progressing.
    reason: ProgressDeadlineExceeded
    status: "False"
    type: Progressing
  observedGeneration: 1
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
